Adding Rmarkdown to produce plots for poster graphics.

--- a/framework_calibrating_ecosystem_models.bib
+++ b/framework_calibrating_ecosystem_models.bib
@@ -447,6 +447,16 @@ abstract = {Computer models simulating a physical process are used in many areas
       primaryClass={stat.ME}
 }
 
+% Likelihood-free inference perspective. Emulate likelihood with neural network ensemble. Use MaxVar and mutual information acquisitions to acquire new points. 
+@article{Lueckmann2018LikelihoodfreeIW,
+  title={Likelihood-free inference with emulator networks},
+  author={Jan-Matthis Lueckmann and Giacomo Bassetto and Theofanis Karaletsos and Jakob H. Macke},
+  journal={ArXiv},
+  year={2018},
+  volume={abs/1805.09294},
+  url={https://api.semanticscholar.org/CorpusID:43920918}
+}
+
 % TODO: need to read
 @article{PANDITA2021114007,
 title = {Surrogate-based sequential Bayesian experimental design using non-stationary Gaussian Processes},
